# cpp

./: FINALOCHKA.java  HamiltonianСycle.cpp  README.md  a.py  chec.java  colloc.java  factorial+template.cpp  hhhh.java  idz1_teor_ver  idz2  lab1_pia.cpp  lab1_pia_no_debug.cpp  lb2.cpp  lb2_greedy.cpp  lb3  lb5.cpp  logger.sh  pred_final.java  task13_OPP.cpp  task14_OOP.cpp  test.txt  tink_1.cpp
Any_task/MFTI2020/: lesson_15.cpp  lesson_16.cpp
Any_tasks/: finder_word.cpp  generator_fullness_graph.cpp  logger.cpp  task14_OOP.cpp  tink_2.cpp  wtire_without_cycle.cpp
Any_tasks/MFTI2020/: lesson_17.cpp
Any_tasks/Multitheard/: les1.cpp  les2.cpp  les3.cpp  les4.cpp
Any_tasks/tasks/: task16_OOP.cpp  task17_oop.cpp  tink_1.cpp
OC/: logger.sh  task1.sh  task2.sh  task3.sh  task7.sh  Отчет.odt
OC/lb2/: task1.sh  task2.sh  task3.sh  task7.sh  Отчет (копия).odt  Отчет.odt
OC/lb3/: a.out  file.txt  lb3.odt  myscript.sh  son  son.c
Par_alg/lab3/: README.md  main.cpp
Patterns/: .gitignore  prototype.cpp
Patterns/Abstact_fabric/: .gitignore  CMakeLists.txt  ICar.h  IEngine.h  IFactory.h  JapaneseCar.cpp  JapaneseCar.h  JapaneseEngine.cpp  JapaneseEngine.h  JapaneseFactory.cpp  JapaneseFactory.h  Makefile  README.md  RussianCar.cpp  RussianCar.h  RussianEngine.cpp  RussianEngine.h  RussianFactory.cpp  RussianFactory.h  main.cpp
Patterns/Builder/: CMakeLists.txt  main.cpp
Piia/: ham_cycle.hpp  lab1_pia_no_debug.cpp  lb2_a_start.cpp  main.cpp  tests.cpp
Piia/lb2/: A_Star.cpp  branches_boards.cpp  greedy.cpp
difur_cpp/: csvfile.h  data.csv  tables.h
difur_cpp/van_der/: main.cpp  main.py
games/: first_matrix.py  nxm.py  second_matrix.py  task2.py
games/lab1/: requirements.txt
games/lab2/: last_task.py  requirements.txt  task1.py  task2_4.py  task2_chance.py  task2_local_games.py
obsidian4/: Диплом.md
(+62 files in other folders)
